greeen color update

--- a/Privont/Browser_Components/scss/_variable.scss
+++ b/Privont/Browser_Components/scss/_variable.scss
@@ -104,7 +104,7 @@ $black:#000000;
 $primary:#6cbbfa;
 $secondary:#e4e6ef;
 $info:#a45ff8;
-$success:#00875a;
+$success:#389e0d;
 $warning:#fbc66c;
 $danger:#fb5ea8;
 $mildgray: #bcc2c8;
@@ -157,7 +157,7 @@ $gray-900:      #181c32;
 $theme-primary-primary: #6cbbfa;
 $theme-primary-secondary:#e4e6ef;
 $theme-primary-info: #a45ff8;
-$theme-primary-success: #00875a;
+$theme-primary-success: #389e0d;
 $theme-primary-danger: #fb5ea8;
 $theme-primary-warning: #fbc66c;
 
@@ -175,7 +175,7 @@ $theme-primary-grd-dark: linear-gradient(45deg, darken($theme-primary-primary, 2
 $theme-secondary-primary: #e4e6ef;
 $theme-secondary-secondary:#6cbbfa;
 $theme-secondary-info: #a45ff8;
-$theme-secondary-success: #00875a;
+$theme-secondary-success: #389e0d;
 $theme-secondary-danger: #fb5ea8;
 $theme-secondary-warning: #fbc66c;
 
@@ -192,7 +192,7 @@ $theme-secondary-grd-dark: linear-gradient(45deg, darken($theme-secondary-primar
 $theme-info-primary: #a45ff8;
 $theme-info-secondary:#e4e6ef;
 $theme-info-info: #6cbbfa;
-$theme-info-success: #00875a;
+$theme-info-success: #389e0d;
 $theme-info-danger: #fb5ea8;
 $theme-info-warning: #fbc66c;
 
@@ -206,7 +206,7 @@ $theme-info-warning-lite: #fff1d9;
 $theme-info-grd: linear-gradient(45deg, $theme-info-primary, $theme-info-info);
 $theme-info-grd-dark: linear-gradient(45deg, darken($theme-info-primary, 20%), darken($theme-info-info, 20%));
 
-$theme-success-primary: #00875a;
+$theme-success-primary: #389e0d;
 $theme-success-secondary:#e4e6ef;
 $theme-success-info: #a45ff8;
 $theme-success-success: #6cbbfa;
@@ -226,7 +226,7 @@ $theme-success-grd-dark: linear-gradient(45deg, darken($theme-success-primary, 2
 $theme-danger-primary: #fb5ea8;
 $theme-danger-secondary:#e4e6ef;
 $theme-danger-info: #a45ff8;
-$theme-danger-success: #00875a;
+$theme-danger-success: #389e0d;
 $theme-danger-danger: #6cbbfa;
 $theme-danger-warning: #fbc66c;
 
@@ -243,7 +243,7 @@ $theme-danger-grd-dark: linear-gradient(45deg, darken($theme-danger-primary, 20%
 $theme-warning-primary: #fbc66c;
 $theme-warning-secondary:#e4e6ef;
 $theme-warning-info: #a45ff8;
-$theme-warning-success: #00875a;
+$theme-warning-success: #389e0d;
 $theme-warning-danger: #fb5ea8;
 $theme-warning-warning: #6cbbfa;
 
