--- a/Privont/Browser_Components/css/bootstrap_extend.css
+++ b/Privont/Browser_Components/css/bootstrap_extend.css
@@ -45,4 +45,17 @@ input, button {
     background-color: #fff !important;
 }
 
+.theme-primary .bg-primary {
+    background-color: #13c2c2 !important;
+}
+
+.box-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.badge-success {
+    /*background-color: #389e0d !important;*/
+}
 /*# sourceMappingURL=bootstrap_extend.css.map */
