--- a/Privont/Browser_Components/scss/_variable.scss
+++ b/Privont/Browser_Components/scss/_variable.scss
@@ -106,7 +106,7 @@ $secondary:#e4e6ef;
 $info:#a45ff8;
 $success:#389e0d;
 $warning:#fbc66c;
-$danger:#fb5ea8;
+$danger:#f5222d;
 $mildgray: #bcc2c8;
 
 $icon-lite-color: #5C607B;
@@ -158,7 +158,7 @@ $theme-primary-primary: #6cbbfa;
 $theme-primary-secondary:#e4e6ef;
 $theme-primary-info: #a45ff8;
 $theme-primary-success: #389e0d;
-$theme-primary-danger: #fb5ea8;
+$theme-primary-danger: #f5222d;
 $theme-primary-warning: #fbc66c;
 
 $theme-primary-primary-lite: #d4ecff;
@@ -176,7 +176,7 @@ $theme-secondary-primary: #e4e6ef;
 $theme-secondary-secondary:#6cbbfa;
 $theme-secondary-info: #a45ff8;
 $theme-secondary-success: #389e0d;
-$theme-secondary-danger: #fb5ea8;
+$theme-secondary-danger: #f5222d;
 $theme-secondary-warning: #fbc66c;
 
 $theme-secondary-primary-lite: #e9edf2;
@@ -193,7 +193,7 @@ $theme-info-primary: #a45ff8;
 $theme-info-secondary:#e4e6ef;
 $theme-info-info: #6cbbfa;
 $theme-info-success: #389e0d;
-$theme-info-danger: #fb5ea8;
+$theme-info-danger: #f5222d;
 $theme-info-warning: #fbc66c;
 
 $theme-info-primary-lite: #e9d7ff;
@@ -210,7 +210,7 @@ $theme-success-primary: #389e0d;
 $theme-success-secondary:#e4e6ef;
 $theme-success-info: #a45ff8;
 $theme-success-success: #6cbbfa;
-$theme-success-danger: #fb5ea8;
+$theme-success-danger: #f5222d;
 $theme-success-warning: #fbc66c;
 
 $theme-success-primary-lite: #bdf7e4;
@@ -223,7 +223,7 @@ $theme-success-warning-lite: #fff1d9;
 $theme-success-grd: linear-gradient(45deg, $theme-success-primary, $theme-success-info);
 $theme-success-grd-dark: linear-gradient(45deg, darken($theme-success-primary, 20%), darken($theme-success-info, 20%));
 
-$theme-danger-primary: #fb5ea8;
+$theme-danger-primary: #f5222d;
 $theme-danger-secondary:#e4e6ef;
 $theme-danger-info: #a45ff8;
 $theme-danger-success: #389e0d;
@@ -244,7 +244,7 @@ $theme-warning-primary: #fbc66c;
 $theme-warning-secondary:#e4e6ef;
 $theme-warning-info: #a45ff8;
 $theme-warning-success: #389e0d;
-$theme-warning-danger: #fb5ea8;
+$theme-warning-danger: #f5222d;
 $theme-warning-warning: #6cbbfa;
 
 $theme-warning-primary-lite: #fff1d9;
