--- a/Privont/Browser_Components/css/bootstrap_extend.css
+++ b/Privont/Browser_Components/css/bootstrap_extend.css
@@ -35,10 +35,13 @@ input, button {
     font-family: 'Poppins', Roboto;
 }
 .btn {
-    font-size: 20px;
+    font-size: 16px;
 }
-
-.search-bx{
+.btn-sm{
+    font-size: 14px !important;
+    line-height: 1.6 !important;
+}
+.search-bx {
     background-color: #fff;
 }
 .search-bx *{
@@ -49,12 +52,30 @@ input, button {
     background-color: #13c2c2 !important;
 }
 
+/*box styles start*/
+
 .box-header{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+/*box styles end*/
+
+/*table styles start*/
+th{
+    font-weight: 600;
+}
+/*table styles end*/
+
+/*badges styles start*/
+.badge {
+    line-height: 1;
+    font-size: 11px;
+    border-radius: 50px;
+    padding: 0.35rem 0.625rem
+}
+/*badges styles end*/
 .badge-success {
     /*background-color: #389e0d !important;*/
 }
