yellow color replace

--- a/Privont/Browser_Components/css/bootstrap_extend.css
+++ b/Privont/Browser_Components/css/bootstrap_extend.css
@@ -77,7 +77,7 @@ th{
 }
 /*badges styles end*/
 .badge-success {
-    /*background-color: #389e0d !important;*/
+    /*background-color: #52c41a !important;*/
 }
 
 
