--- a/Privont/Browser_Components/scss/_variable.scss
+++ b/Privont/Browser_Components/scss/_variable.scss
@@ -104,8 +104,8 @@ $black:#000000;
 $primary:#6cbbfa;
 $secondary:#e4e6ef;
 $info:#a45ff8;
-$success:#389e0d;
-$warning:#fbc66c;
+$success:#52c41a;
+$warning:#fadb14;
 $danger:#f5222d;
 $mildgray: #bcc2c8;
 
@@ -157,9 +157,9 @@ $gray-900:      #181c32;
 $theme-primary-primary: #6cbbfa;
 $theme-primary-secondary:#e4e6ef;
 $theme-primary-info: #a45ff8;
-$theme-primary-success: #389e0d;
+$theme-primary-success: #52c41a;
 $theme-primary-danger: #f5222d;
-$theme-primary-warning: #fbc66c;
+$theme-primary-warning: #fadb14;
 
 $theme-primary-primary-lite: #d4ecff;
 $theme-primary-secondary-lite:#e9edf2;
@@ -175,9 +175,9 @@ $theme-primary-grd-dark: linear-gradient(45deg, darken($theme-primary-primary, 2
 $theme-secondary-primary: #e4e6ef;
 $theme-secondary-secondary:#6cbbfa;
 $theme-secondary-info: #a45ff8;
-$theme-secondary-success: #389e0d;
+$theme-secondary-success: #52c41a;
 $theme-secondary-danger: #f5222d;
-$theme-secondary-warning: #fbc66c;
+$theme-secondary-warning: #fadb14;
 
 $theme-secondary-primary-lite: #e9edf2;
 $theme-secondary-secondary-lite:#d4ecff;
@@ -192,9 +192,9 @@ $theme-secondary-grd-dark: linear-gradient(45deg, darken($theme-secondary-primar
 $theme-info-primary: #a45ff8;
 $theme-info-secondary:#e4e6ef;
 $theme-info-info: #6cbbfa;
-$theme-info-success: #389e0d;
+$theme-info-success: #52c41a;
 $theme-info-danger: #f5222d;
-$theme-info-warning: #fbc66c;
+$theme-info-warning: #fadb14;
 
 $theme-info-primary-lite: #e9d7ff;
 $theme-info-secondary-lite:#e9edf2;
@@ -206,12 +206,12 @@ $theme-info-warning-lite: #fff1d9;
 $theme-info-grd: linear-gradient(45deg, $theme-info-primary, $theme-info-info);
 $theme-info-grd-dark: linear-gradient(45deg, darken($theme-info-primary, 20%), darken($theme-info-info, 20%));
 
-$theme-success-primary: #389e0d;
+$theme-success-primary: #52c41a;
 $theme-success-secondary:#e4e6ef;
 $theme-success-info: #a45ff8;
 $theme-success-success: #6cbbfa;
 $theme-success-danger: #f5222d;
-$theme-success-warning: #fbc66c;
+$theme-success-warning: #fadb14;
 
 $theme-success-primary-lite: #bdf7e4;
 $theme-success-secondary-lite:#e9edf2;
@@ -226,9 +226,9 @@ $theme-success-grd-dark: linear-gradient(45deg, darken($theme-success-primary, 2
 $theme-danger-primary: #f5222d;
 $theme-danger-secondary:#e4e6ef;
 $theme-danger-info: #a45ff8;
-$theme-danger-success: #389e0d;
+$theme-danger-success: #52c41a;
 $theme-danger-danger: #6cbbfa;
-$theme-danger-warning: #fbc66c;
+$theme-danger-warning: #fadb14;
 
 $theme-danger-primary-lite: #ffcfe6;
 $theme-danger-secondary-lite:#e9edf2;
@@ -240,10 +240,10 @@ $theme-danger-warning-lite: #fff1d9;
 $theme-danger-grd: linear-gradient(45deg, $theme-danger-primary, $theme-danger-info);
 $theme-danger-grd-dark: linear-gradient(45deg, darken($theme-danger-primary, 20%), darken($theme-danger-info, 20%));
 
-$theme-warning-primary: #fbc66c;
+$theme-warning-primary: #fadb14;
 $theme-warning-secondary:#e4e6ef;
 $theme-warning-info: #a45ff8;
-$theme-warning-success: #389e0d;
+$theme-warning-success: #52c41a;
 $theme-warning-danger: #f5222d;
 $theme-warning-warning: #6cbbfa;
 
