--- a/Privont/Browser_Components/scss/_variable.scss
+++ b/Privont/Browser_Components/scss/_variable.scss
@@ -101,7 +101,7 @@ $light5: #b5b5c3;
 $dx-blue: #485e90;
 $white:#ffffff;
 $black:#000000;
-$primary:#6cbbfa;
+$primary:#13c2c2;
 $secondary:#e4e6ef;
 $info:#a45ff8;
 $success:#52c41a;
@@ -154,7 +154,7 @@ $gray-800:      #3f4254;
 $gray-900:      #181c32;
 
 
-$theme-primary-primary: #6cbbfa;
+$theme-primary-primary: #13c2c2;
 $theme-primary-secondary:#e4e6ef;
 $theme-primary-info: #a45ff8;
 $theme-primary-success: #52c41a;
@@ -173,7 +173,7 @@ $theme-primary-grd-dark: linear-gradient(45deg, darken($theme-primary-primary, 2
 
 
 $theme-secondary-primary: #e4e6ef;
-$theme-secondary-secondary:#6cbbfa;
+$theme-secondary-secondary:#13c2c2;
 $theme-secondary-info: #a45ff8;
 $theme-secondary-success: #52c41a;
 $theme-secondary-danger: #f5222d;
@@ -191,7 +191,7 @@ $theme-secondary-grd-dark: linear-gradient(45deg, darken($theme-secondary-primar
 
 $theme-info-primary: #a45ff8;
 $theme-info-secondary:#e4e6ef;
-$theme-info-info: #6cbbfa;
+$theme-info-info: #13c2c2;
 $theme-info-success: #52c41a;
 $theme-info-danger: #f5222d;
 $theme-info-warning: #fadb14;
@@ -209,7 +209,7 @@ $theme-info-grd-dark: linear-gradient(45deg, darken($theme-info-primary, 20%), d
 $theme-success-primary: #52c41a;
 $theme-success-secondary:#e4e6ef;
 $theme-success-info: #a45ff8;
-$theme-success-success: #6cbbfa;
+$theme-success-success: #13c2c2;
 $theme-success-danger: #f5222d;
 $theme-success-warning: #fadb14;
 
@@ -227,7 +227,7 @@ $theme-danger-primary: #f5222d;
 $theme-danger-secondary:#e4e6ef;
 $theme-danger-info: #a45ff8;
 $theme-danger-success: #52c41a;
-$theme-danger-danger: #6cbbfa;
+$theme-danger-danger: #13c2c2;
 $theme-danger-warning: #fadb14;
 
 $theme-danger-primary-lite: #ffcfe6;
@@ -245,7 +245,7 @@ $theme-warning-secondary:#e4e6ef;
 $theme-warning-info: #a45ff8;
 $theme-warning-success: #52c41a;
 $theme-warning-danger: #f5222d;
-$theme-warning-warning: #6cbbfa;
+$theme-warning-warning: #13c2c2;
 
 $theme-warning-primary-lite: #fff1d9;
 $theme-warning-secondary-lite:#e9edf2;
