--- a/Privont/Browser_Components/css/style_rtl.css
+++ b/Privont/Browser_Components/css/style_rtl.css
@@ -2619,7 +2619,7 @@ Margin property
   left: inherit; }
 .rtl .timeline__post {
   border-left: none;
-  border-right: 3px solid #6cbbfa; }
+  border-right: 3px solid #13c2c2; }
 
 @media screen and (max-width: 640px) {
   .rtl .timeline5:before {
