--- a/Privont/Views/SMSSetting/Index.cshtml
+++ b/Privont/Views/SMSSetting/Index.cshtml
@@ -31,6 +31,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="box-body">
                                 <div class="form-horizontal">
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -39,9 +40,52 @@
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    <label>SMS format</label>
+                                                    <label>SMS format (Lead Subscribe)</label>
                                                 </div>
                                             </div>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <label>Subscribe Key</label>
+                                                    @Html.EditorFor(model => model.SMSSubKey, new { @class = "form-control" })
+                                                </div>
+                                            </div>
+                                            <div class="row ">
+                                                <div class="col-md-8" style="padding-left:0px;">
+                                                    <small class="pull-right">(Message Fields)</small>
+                                                </div>
+                                                <div class="col-md-2 pull-right">
+                                                    <Select class="form-control" id="cmbSub">
+                                                        <option value="0">Select Field</option>
+                                                        <option value="[Name]">Name</option>
+                                                        <option value="[SubKey]">SubKey</option>
+                                                    </Select>
+                                                </div>
+                                                <div class="col-md-2 pull-right" style="padding-left:0px;margin-bottom:10px">
+                                                    <input type="button" class="btn-sm btn-primary" value="Add Field" id="btnAddSaleFields" onclick="AddFieldtoSub()">
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    @Html.TextAreaFor(model => model.SMSDetailSub, new { @class = "form-control", @style = "width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;" })
+                                                    @Html.ValidationMessageFor(model => model.SMSDetailSub, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box-body">
+                                <div class="form-horizontal">
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <br>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <label>SMS format (Lead Invitation)</label>
+                                                </div>
+                                            </div>
+                                            <br />
                                             <div class="row ">
                                                 <div class="col-md-8" style="padding-left:0px;">
                                                     <small class="pull-right">(Message Fields)</small>
@@ -59,7 +103,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    @Html.TextAreaFor(model => model.SMSDetail, new { @class = "textarea", @style = "width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;" })
+                                                    @Html.TextAreaFor(model => model.SMSDetail, new { @class = "form-control", @style = "width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;" })
                                                     @Html.ValidationMessageFor(model => model.SMSDetail, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
@@ -96,7 +140,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    @Html.TextAreaFor(model => model.SMSDetailInvite, new { @class = "textarea", @style = "width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;" })
+                                                    @Html.TextAreaFor(model => model.SMSDetailInvite, new { @class = "form-control", @style = "width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;" })
                                                     @Html.ValidationMessageFor(model => model.SMSDetailInvite, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
